--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/oneFragment">
+    app:startDestination="@id/searchFragment">
 
     <fragment
-        android:id="@+id/oneFragment"
-        android:name="jp.co.yumemi.android.code_check.SearchFragment"
+        android:id="@+id/searchFragment"
+        android:name="jp.co.yumemi.android.code_check.screen.search.SearchFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_search">
         <action
             android:id="@+id/action_repositoriesFragment_to_repositoryFragment"
-            app:destination="@id/twoFragment" />
+            app:destination="@id/resultFragment" />
     </fragment>
 
     <fragment
-        android:id="@+id/twoFragment"
-        android:name="jp.co.yumemi.android.code_check.TwoFragment"
+        android:id="@+id/resultFragment"
+        android:name="jp.co.yumemi.android.code_check.screen.result.ResultFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_result">
         <argument
-            android:name="item"
-            app:argType="jp.co.yumemi.android.code_check.Item" />
+            android:name="model"
+            app:argType="jp.co.yumemi.android.code_check.screen.ResultScreenArgsModel" />
     </fragment>
 
 </navigation>
